--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -28,7 +28,7 @@ jobs:
           restore-keys: |
             v1-${{ runner.os }}-go-test-
       - name: setup-git
-        run: git config --global url."https://github-actions:${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/"
+        run: git config --global url."https://github-actions:${{ secrets.GITHUB_TOKEN }}@github.com/".insteadOf "https://github.com/abema/crema"
       - name: Go generate (root) and verify clean
         run: |
           go generate
